# 100ask_project1

./: .gitignore  100ask_project1.config  CMakeLists.txt  README.md  gui.conf  led.sh  main.c
UI/: button.c
command_files/: key1.sh
config/: config.c
display/: disp_manager.c  disp_manager.h  framebuffer.c
font/: font_freetype.c  font_manager.c
include/: UI.h  common.h  config.h  disp_manager.h  font_manager.h  input_manager.h  page_manager.h
input/: input_manager.c  net_input.c  touchscreen.c
page/: main_page.c  page_manager.c
test_script_and_client/: board_test.sh
test_script_and_client/detectdev_client/: client  client.c  detect_dev
